Blender 2 .78c will freeze or force close when adding particles at random. #51390

Closed
opened 2017-05-02 11:30:38 +02:00 by Chris D · 13 comments

System Information
Acer Aspire One Cloudbook 14 (AO1-431-C8G8)
Ubuntu GNOME 16.04.1 LTS with 4.10.0-20-generic kernel

Blender Version
Broken: Blender 2.78c, but stub 0?

Short description of error
Blender will freeze or force close when adding particles at random.

Exact steps for others to reproduce the error
Enter particle edit mode and start adding particles, occasionally Blender will crash.

novi.crash.txt
The Broken Blend.zip

**System Information** Acer Aspire One Cloudbook 14 (AO1-431-C8G8) Ubuntu GNOME 16.04.1 LTS with 4.10.0-20-generic kernel **Blender Version** Broken: Blender 2.78c, but stub 0? **Short description of error** Blender will freeze or force close when adding particles at random. **Exact steps for others to reproduce the error** Enter particle edit mode and start adding particles, occasionally Blender will crash. [novi.crash.txt](https://archive.blender.org/developer/F584756/novi.crash.txt) [The Broken Blend.zip](https://archive.blender.org/developer/F584758/The_Broken_Blend.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @CheesecakeCG

Added subscriber: @CheesecakeCG

Added subscriber: @sindra1961

Added subscriber: @sindra1961

When 'Display modifier in viewport' of Bevel modifier is ON, this phenomenon occurs.
If you carry it out after you turned it off, this phenomenon does not occur.
I think that this is a bug.

When 'Display modifier in viewport' of Bevel modifier is ON, this phenomenon occurs. If you carry it out after you turned it off, this phenomenon does not occur. I think that this is a bug.
Author

That seems to be it, also moving the particle modifier above the bevel modifier keeps it from crashing.

That seems to be it, also moving the particle modifier above the bevel modifier keeps it from crashing.

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

I tried this on OSX and could not make it crash.
It would help if you can reduce your .blend to the simplest form to find what exactly makes it crash.
(ie. cube with bevel and particle?)

I tried this on OSX and could not make it crash. It would help if you can reduce your .blend to the simplest form to find what exactly makes it crash. (ie. cube with bevel and particle?)
Author

Here is the simplified version of the file and the crash log for it. It only crashes when X Mirror is on.

Simplified Blend.blend
Simplified Blend.crash.txt

Here is the simplified version of the file and the crash log for it. It only crashes when X Mirror is on. [Simplified Blend.blend](https://archive.blender.org/developer/F586380/Simplified_Blend.blend) [Simplified Blend.crash.txt](https://archive.blender.org/developer/F586378/Simplified_Blend.crash.txt)

This does not occur when I replace Bevel modifier with a different thing.
For example, it is subdivision surface.
EXCEPTION_ACCESS_VIOLATION occurs and crashes.

This does not occur when I replace Bevel modifier with a different thing. For example, it is subdivision surface. EXCEPTION_ACCESS_VIOLATION occurs and crashes.
Luca Rood was assigned by Aaron Carlisle 2017-05-05 00:16:16 +02:00

This issue was referenced by 06ca2c9d03

This issue was referenced by 06ca2c9d0320a4a4beae3c6ca5576ed208331dcb

Added subscribers: @LucaRood-3, @mont29

Added subscribers: @LucaRood-3, @mont29
Luca Rood was unassigned by Bastien Montagne 2017-05-29 16:07:08 +02:00
Bastien Montagne self-assigned this 2017-05-29 16:07:08 +02:00

Confirmed, issue is in DM evaluation code actually, never clears the deformedOnly flag when evaluating a generative modifier!!!

Confirmed, issue is in DM evaluation code actually, never clears the `deformedOnly` flag when evaluating a generative modifier!!!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51390
No description provided.