Fix T51390: Blender 2.78c will freeze or force close when adding particles at random.

DM evaluation code was simply never clearing the `deformedOnly` flag
when evaluating a generative modifier...

Quite astonishing this never got catched before, a lot of particle code
relies on valid value of this flag!!!